--- a/packages/block-editor/src/components/App/style.css
+++ b/packages/block-editor/src/components/App/style.css
@@ -1,142 +1,24 @@
 .App {
-	--1x: 8px;
-	--2x: 16px;
-	--3x: 24px;
-	--4x: 32px;
-	--5x: 40px;
-	--6x: 48px;
-	--7x: 56px;
-	--8x: 64px;
-	--9x: 72px;
-	--10x: 80px;
-	--11x: 88px;
-	--12x: 96px;
-	--13x: 104px;
-	--14x: 112px;
-	--15x: 120px;
-
-	--color-white: #fff;
-	--color-black: #272432;
-
-	--color-lighter-gray: #e9ebeb;
-	--color-light-gray: #c2c2c2;
-	--color-gray: #9a9a9a;
-	--color-dark-gray: #7c7c7c;
-	--color-darker-gray: #5d5d5d;
-	--color-darkest-gray: #272432;
-
-	--color-light-slate: #d6e5ef;
-	--color-slate: #a3bfd4;
-	--color-dark-slate: #8198a7;
-	--color-darker-slate: #5d7382;
-
-	--color-accent-teal: #00ffba;
-	--color-accent-teal-00: #00ffba00;
-	--color-accent-teal-blue: #00b2d0;
-	--color-accent-blue: #006be5;
-	--color-accent-blue-00: #006be500;
-	--color-accent-purple: #7f1192;
-	--color-accent-pink: #b10a50;
-	--color-accent-red: #e6255d;
-	--color-accent-orange: #ef3e23;
-	--color-accent-yellow: #f0bc05;
-	--color-accent-yellow-30: #b48e13;
-
-	--color-error: #fde5ef;
-	--color-error-10: #ed00631a;
-
-	--color-code-property: #b10a50;
-	--color-code-value: #ea971a;
-
-	--gradient-orange-red: linear-gradient(
-		150deg,
-		var(--color-accent-orange),
-		var(--color-accent-red)
-	);
-	--gradient-teal-blue: linear-gradient(
-		150deg,
-		var(--color-accent-teal),
-		var(--color-accent-blue)
-	);
-	--gradient-teal-blue-soft: linear-gradient(
-		150deg,
-		var(--color-accent-teal-blue),
-		var(--color-accent-blue)
-	);
-	--gradient-teal-blue-transparent: linear-gradient(
-		90deg,
-		var(--color-accent-teal-00) 0%,
-		var(--color-accent-teal) 20%,
-		var(--color-accent-blue) 80%,
-		var(--color-accent-blue-00) 100%
-	);
-	--gradient-gray: linear-gradient(
-		150deg,
-		var(--color-lighter-gray),
-		var(--color-gray)
-	);
-	--gradient-light-gray: linear-gradient(
-		150deg,
-		var(--color-lighter-gray),
-		var(--color-light-gray)
-	);
-	--gradient-white: linear-gradient(
-		150deg,
-		var(--color-white),
-		var(--color-lighter-gray)
-	);
-	--gradient-purple-pink: radial-gradient(
-		ellipse at bottom,
-		#9e05e6,
-		#5200bb
-	);
-
-	--font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-		Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-	--font-family-monospace: "Fira Mono", monospace;
-
-	--font-size-base: 16px;
-	--font-size-large: 20px;
-	--font-size-x-large: 28px;
-	--font-size-xx-large: 40px;
-	--font-size-small: 14px;
-	--font-size-x-small: 12px;
-
-	--font-weight-base: 300;
-	--font-weight-medium: 400;
-	--font-weight-semi-bold: 500;
-	--font-weight-bold: 600;
-
-	--line-height-base: 1.5;
-
-	--box-shadow-medium: 0 3px 15px #27243233;
-	--box-shadow-low: 3px 3px 0 #27243233;
-	--box-shadow-x-low: 2px 2px 0 #27243233;
-
-	--transition: all 0.15s var(--transition-timing-function);
-	--transition-slow: all 0.9s var(--transition-timing-function);
-	--transition-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
-
 	--app-height: max(
 		680px,
 		calc(
-			100vh - var(--navigator-height) -
+			100vh - var(--nav-height, 0px) - var(--app-nav-height, 0px) -
 				var(--wp-admin--admin-bar--height, 0px)
 		)
 	);
-
-	--navigator-height: calc(var(--7x) + 3px);
+	--app-nav-height: calc(var(--8x) + 3px);
 	--sidebar-width: 380px;
 
 	background: #f0f0f1;
 	color: var(--color-black);
 	display: grid;
-	grid-template-rows: var(--navigator-height) max-content;
+	grid-template-rows: var(--app-nav-height) max-content;
 	font-family: var(--font-family);
 	font-size: var(--font-size-base);
 	font-weight: var(--font-weight-base);
 	line-height: var(--line-height-base);
 	position: relative;
+	width: 100%;
 	z-index: 10;
 
 	:where(p) {
