--- a/packages/block-editor/src/components/SaveDialog/style.css
+++ b/packages/block-editor/src/components/SaveDialog/style.css
@@ -1,6 +1,6 @@
 .SaveDialog {
 	background: #ffffff40;
-	height: calc(var(--app-height) + var(--navigator-height));
+	height: calc(var(--app-height) + var(--app-nav-height));
 	left: 0;
 	opacity: 0;
 	position: absolute;
@@ -20,7 +20,7 @@
 	background: transparent;
 	height: auto;
 	left: var(--3x);
-	top: calc(var(--app-height) + var(--navigator-height) - var(--3x));
+	top: calc(var(--app-height) + var(--app-nav-height) - var(--3x));
 	width: auto;
 }
 
